# GO3

./: .gitignore  .pylintrc  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml  requirements.mysql.txt  requirements.postgres.txt  requirements.txt
.github/linters/: .hadolint.yaml
.github/workflows/: deploy.yml  image_build_and_publish.yml  lint.yml  testing.yml
agenda/: admin.py  apps.py  helpers.py  models.py  tests.py  urls.py  views.py
agenda/templatetags/: agenda_tags.py
band/: admin.py  api.py  apps.py  forms.py  helpers.py  models.py  signals.py  tasks.py  tests.py  urls.py  util.py  views.py
band/migrations/: 0001_initial.py  0002_assoc_member.py  0002_auto_20191227_1034.py  0003_auto_20191218_1734.py  0003_auto_20191227_1051.py  0003_auto_20200911_2108.py  0003_section_is_default.py  0004_auto_20191227_1108.py  0004_auto_20200119_2146.py  0004_band_pub_cal_feed_dirty.py  0005_auto_20200119_2147.py  0005_band_pub_cal_feed_id.py  0005_band_timezone.py  0006_auto_20191227_2155.py  0006_auto_20200120_1829.py  0006_remove_uuid_null.py  0007_auto_20200121_1958.py  0007_populate_uuid_values.py  0007_section.py  0008_auto_20191230_1838.py  0008_band_default_language.py  0008_band_status.py  0009_assoc_default_section.py  0009_auto_20210313_1431.py  0010_assoc_join_date.py  0010_auto_20191231_0922.py  (+26 more)
firewall/: helpers.py  middleware.py  tests.py  urls.py
fixtures/: makefakedata.py  testdata.json
gig/: admin.py  api.py  apps.py  forms.py  helpers.py  models.py  signals.py  tasks.py  tests.py  urls.py  util.py  views.py
go2data/: .gitignore  parse_to_csv.py
go3/: .env.bak  .env.example  admin.py  api.py  apps.py  asgi.py  backends.py  colors.py  datetime_without_timezone.py  rollbar_middleware.py  schema.py  settings.py  tasks.py  template_globals.py  test.env  tests.py  urls.py  user_timezone_middleware.py  views.py  wsgi.py
help/: forms.py  tests.py  urls.py  views.py
lib/: asyncsignal.py  caldav.py  captcha.py  email.py  mixins.py  rss.py  template_test.py  tests.py  translation.py
loadtest/: login_flow.js
member/: admin.py  api.py  apps.py  forms.py  helpers.py  models.py  signals.py  tasks.py  tests.py  urls.py  util.py  views.py
migration/: forms.py  helpers.py  urls.py  views.py
motd/: admin.py  apps.py  models.py  signals.py  tests.py  views.py
stats/: admin.py  apps.py  helpers.py  models.py  tasks.py  tests.py  urls.py  util.py  views.py
terraform/: .terraform.lock.hcl  cloud_run_service.tf  cloud_sql_db.tf  cloud_storage.tf  iam.tf  main.tf  outputs.tf  secrets.tf  variables.tf
(+282 files in other folders)
