[tool.poetry]
name = "go3"
version = "0.0.1"
description = "Gig-o-Matic!"
authors = ["Your Name <you@example.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
Django = "3.2.6"
django-crispy-forms = "1.12.0"
django-environ = "0.4.5"
django-extensions = "3.1.3"
django-picklefield = "3.0.1"
django-q = "1.3.9"
django-sendgrid-v5 = "0.9.1"
django-simple-history = "3.0.0"
django-widget-tweaks = "1.4.8"
graphene-django = "2.15.0"
icalendar = "4.0.7"
Markdown = "3.3.4"
pycodestyle = "2.7.0"
pyfakefs = "^4.5.0"
python-dateutil = "2.8.2"
pytz = "2021.1"
sendgrid = "6.8.0"
validators = "0.18.2"
whitenoise = "5.3.0"
django-storages = {extras = ["google"], version = "^1.14.2"}

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[tool.poetry.group.mysql]
optional = true

[tool.poetry.group.mysql.dependencies]
mysql-connector-python = "8.0.26"
mysqlclient = "2.0.3"

[tool.poetry.group.postgres]
optional = true

[tool.poetry.group.postgres.dependencies]
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Same as Black.
line-length = 180
