[tool.poetry]
name = "go3"
version = "0.0.1"
description = "Gig-o-Matic!"
authors = ["Your Name <you@example.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
Django = "4.2.10"
django-crispy-forms = "1.12.0"
django-environ = "0.4.5"
django-extensions = "3.1.3"
django-picklefield = "^3.1"
django-q2 = "1.6.1"
django-q-sentry = "^0.1.6"
django-sendgrid-v5 = "1.2.3"
django-simple-history = "3.0.0"
django-widget-tweaks = "1.4.8"
graphene-django = "2.16.0"
gunicorn = "^21.2.0"
icalendar = "4.0.7"
Markdown = "3.5.2"
pycodestyle = "2.7.0"
pyfakefs = "^5.3.5"
python-dateutil = "2.8.2"
pytz = "2021.1"
sendgrid = "6.8.0"
sentry-sdk= "^1.40.5"
validators = "0.18.2"
whitenoise = "5.3.0"
django-storages = {extras = ["google"], version = "^1.14.2"}

[tool.poetry.group.dev.dependencies]
packaging = "^23.2"
pylint = "2.9.6"
pylint-django = "2.4.4"
pylint-plugin-utils = "0.6"

[tool.poetry.group.mysql]
optional = true

[tool.poetry.group.mysql.dependencies]
mysql-connector-python = "8.0.26"
mysqlclient = "2.0.3"

[tool.poetry.group.postgres.dependencies]
psycopg = "^3.1.18"
psycopg_binary = "^3.1.18"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Same as Black.
line-length = 180
